# ook-4-fundings-front

./: .gitignore  README.md  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  run.py  type.py
.github/workflows/: deploy.yml
static/css/: style.css
static/js/: app.js  profile.js  reports.js
templates/: index.html  mcp-setup.html  profile.html  reports.html
